test/src/e2e_vm_tests/test_programs/should_fail/recover_path_lib_definition/src/main.sw
contract;

fn recover_on_path() -> b256 {
    // intended to use std::hash::sha256
    return std::hash::(u64::max());
}

fn recovery_witness() -> bool { 0 }
